# myrt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
examples/: example-1-800x400-gamma-2.ppm
src/: main.cpp  main.hpp
src/camera/: AbstractCamera.hpp  LensCamera.hpp  SimpleCamera.hpp  make_camera.hpp
src/exception/: MyrtException.hpp  OptionsException.hpp
src/hit_record/: HitRecord.hpp
src/image/: AbstractImageSaver.hpp  ImageBuffer.hpp  OutputImage.hpp  PPMImageSaver.hpp  make_image_saver.hpp  make_output_image.hpp
src/image/buffer/: ImageBuffer.hpp  make_image_buffer.hpp
src/image/saver/: AbstractImageSaver.hpp  ImageType.hpp  PPMImageSaver.hpp  make_image_saver.hpp
src/material/: AbstractMaterial.hpp  Dielectric.hpp  Lambertian.hpp  Metal.hpp  forward.hpp  make_material.hpp
src/object/: AbstractObject.hpp  Sphere.hpp  make_object.hpp
src/options/: MyrtOptions.hpp  MyrtOptionsException.hpp  Options.hpp  OptionsException.hpp  get_help_string.hpp  parse_options.hpp
src/random/: Random.hpp
src/scene/: Scene.hpp  make_scene.hpp
src/texture/: AbstractTexture.hpp  Checker.hpp  Constant.hpp  forward.hpp  make_texture.hpp
src/tracer/: AbstractTracer.hpp  SimpleTracer.hpp  trace_scene.hpp
